--- a/solution/Makefile
+++ b/solution/Makefile
@@ -3,9 +3,9 @@ SUBMITPATH = ~cs537-1/handin/$(LOGIN)/p3
 CC = gcc
 CFLAGS-common = -Wall -Wextra -Werror -pedantic -std=gnu18
 CFLAGS = $(CFLAGS-common) -O2
-CFLAGS-dbg = $(CFLAGS-common) -Og
+CFLAGS-dbg = $(CFLAGS-common) -Og -ggdb
 TARGET = wsh
-SRC = $(TARGET).c
+SRC = $(TARGET).c $(TARGET).h
 
 all: $(TARGET) $(TARGET)-dbg
 
