--- a/solution/wsh-dbg.dSYM/Contents/Resources/Relocations/aarch64/wsh-dbg.yml
+++ b/solution/wsh-dbg.dSYM/Contents/Resources/Relocations/aarch64/wsh-dbg.yml
@@ -2,12 +2,16 @@
 triple:          'arm64-apple-darwin'
 binary-path:     wsh-dbg
 relocations:
-  - { offsetInCU: 0x1E, offset: 0x1E, size: 0x8, addend: 0x0, symName: _printHistory, symObjAddr: 0x0, symBinAddr: 0x1000038FC, symSize: 0x54 }
-  - { offsetInCU: 0x8C, offset: 0x8C, size: 0x8, addend: 0x0, symName: _printHistory, symObjAddr: 0x0, symBinAddr: 0x1000038FC, symSize: 0x54 }
-  - { offsetInCU: 0xBB, offset: 0xBB, size: 0x8, addend: 0x0, symName: _addToHistory, symObjAddr: 0x54, symBinAddr: 0x100003950, symSize: 0xC0 }
-  - { offsetInCU: 0x11C, offset: 0x11C, size: 0x8, addend: 0x0, symName: _updateHistoryCapacity, symObjAddr: 0x114, symBinAddr: 0x100003A10, symSize: 0x90 }
-  - { offsetInCU: 0x1B5, offset: 0x1B5, size: 0x8, addend: 0x0, symName: _read_cmd, symObjAddr: 0x1A4, symBinAddr: 0x100003AA0, symSize: 0x48 }
-  - { offsetInCU: 0x468, offset: 0x468, size: 0x8, addend: 0x0, symName: _parse_cmd, symObjAddr: 0x1EC, symBinAddr: 0x100003AE8, symSize: 0x6C }
-  - { offsetInCU: 0x52C, offset: 0x52C, size: 0x8, addend: 0x0, symName: _exec_cmd, symObjAddr: 0x258, symBinAddr: 0x100003B54, symSize: 0x184 }
-  - { offsetInCU: 0x69B, offset: 0x69B, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x3DC, symBinAddr: 0x100003CD8, symSize: 0x1C8 }
+  - { offsetInCU: 0x1E, offset: 0x1E, size: 0x8, addend: 0x0, symName: _read_cmd, symObjAddr: 0x0, symBinAddr: 0x1000035F8, symSize: 0x48 }
+  - { offsetInCU: 0x8C, offset: 0x8C, size: 0x8, addend: 0x0, symName: _read_cmd, symObjAddr: 0x0, symBinAddr: 0x1000035F8, symSize: 0x48 }
+  - { offsetInCU: 0x33F, offset: 0x33F, size: 0x8, addend: 0x0, symName: _parse_cmd, symObjAddr: 0x48, symBinAddr: 0x100003640, symSize: 0x6C }
+  - { offsetInCU: 0x377, offset: 0x377, size: 0x8, addend: 0x0, symName: _printHistory, symObjAddr: 0xB4, symBinAddr: 0x1000036AC, symSize: 0x54 }
+  - { offsetInCU: 0x3A6, offset: 0x3A6, size: 0x8, addend: 0x0, symName: _searchHistory, symObjAddr: 0x108, symBinAddr: 0x100003700, symSize: 0x20 }
+  - { offsetInCU: 0x3D3, offset: 0x3D3, size: 0x8, addend: 0x0, symName: _addToHistory, symObjAddr: 0x128, symBinAddr: 0x100003720, symSize: 0xC0 }
+  - { offsetInCU: 0x434, offset: 0x434, size: 0x8, addend: 0x0, symName: _updateHistoryCapacity, symObjAddr: 0x1E8, symBinAddr: 0x1000037E0, symSize: 0x98 }
+  - { offsetInCU: 0x55F, offset: 0x55F, size: 0x8, addend: 0x0, symName: _history, symObjAddr: 0x280, symBinAddr: 0x100003878, symSize: 0x150 }
+  - { offsetInCU: 0x717, offset: 0x717, size: 0x8, addend: 0x0, symName: _ls, symObjAddr: 0x3D0, symBinAddr: 0x1000039C8, symSize: 0xA8 }
+  - { offsetInCU: 0x896, offset: 0x896, size: 0x8, addend: 0x0, symName: _run_command, symObjAddr: 0x478, symBinAddr: 0x100003A70, symSize: 0x38 }
+  - { offsetInCU: 0x953, offset: 0x953, size: 0x8, addend: 0x0, symName: _exec_cmd, symObjAddr: 0x4B0, symBinAddr: 0x100003AA8, symSize: 0x1C0 }
+  - { offsetInCU: 0xAF4, offset: 0xAF4, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x670, symBinAddr: 0x100003C68, symSize: 0x1C0 }
 ...
