added local variable replacement, added syscall to execute commands, add batch file support, todo waitpid done, added comments handling in commands and batch files, fixed bugs, empty input handled

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -16,4 +16,4 @@ $(TARGET)-dbg: $(SRC)
 	$(CC) $(CFLAGS-dbg) $< -o $@
 
 clean:
-	rm -f $(TARGET) $(TARGET)-dbg local*.txt
+	rm -f $(TARGET) $(TARGET)-dbg
