updated makefile and redirection logic, modified path initial setup

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -16,4 +16,4 @@ $(TARGET)-dbg: $(SRC)
 	$(CC) $(CFLAGS-dbg) $< -o $@
 
 clean:
-	rm -f $(TARGET) $(TARGET)-dbg
+	rm -rf $(TARGET) $(TARGET)-dbg *.out *.dSYM
