fixed bugs, patched all memory leaks

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -2,7 +2,7 @@ LOGIN = chiragjain
 SUBMITPATH = ~cs537-1/handin/$(LOGIN)/p3
 CC = gcc
 CFLAGS-common = -Wall -Wextra -Werror -pedantic -std=gnu18
-CFLAGS = $(CFLAGS-common) -O2
+CFLAGS = $(CFLAGS-common) -O2 -g
 CFLAGS-dbg = $(CFLAGS-common) -Og -ggdb
 TARGET = wsh
 SRC = $(TARGET).c $(TARGET).h
